Fix flex wrapping, add blur to images

--- a/CSS/recipe-styles.css
+++ b/CSS/recipe-styles.css
@@ -13,21 +13,33 @@ h1 {
 }
 
 .flex-container {
+    flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
-    max-width: 100%;
+    flex: 1;
 }
 
 .flex-container div {
-    flex: 1 1 0%;
+    flex: 1 1 auto;
     padding: 20px;
-    max-width: fit-content;
+    max-width: auto;
 }
 
-.box {
+img:hover {
+    webkit-filter: blur(4px); /* Chrome, Safari, Opera */
+    filter: blur(4px);
+}
+
+.box1, .box2, .box3 {
     position: relative;
     max-width: fit-content;
 }
+/* 
+.box2 {
+    background-image: url(/images/pizza.jpg);
+    background-size: contain;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+} */
 
 .centered {
     color: white;
@@ -42,5 +54,4 @@ h1 {
 
 img {
     max-height: 80vh;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
 }
